# modular-coevolution-examples

./: .gitignore  pyproject.toml  readme.md
config/geneticprogramming/twocars/: default.toml
geneticprogramming/twocars/: readme.md  stateactiongame.py  twocarsexperiment.py  twocarsgame.py
geneticprogramming/twocars/agents/: twocarsgpagent.py
geneticprogramming/twocars/gpnodes/: twocarsgpnode.py
scripts/: readme.md
scripts/geneticprogramming/twocars/: default.bat  default.sh
