[project]
name = "modular-coevolution-examples"
version = "2025.4.10"
description = "Example projects demonstrating the modular-coevolution library"
authors = [
    {name = "Sean N. Harris", email = "snh0037@auburn.edu"}
]

requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pycairo",
    "pillow",
    "tqdm",
    "modular-coevolution@git+ssh://git@github.com/SeanNHarris/modular-coevolution.git",
]

[project.urls]
Github = "https://github.com/SeanNHarris/modular-coevolution-examples"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["geneticprogramming*"]